[gd_scene load_steps=56 format=2]

[ext_resource path="res://scenes/game_mode.gd" type="Script" id=1]
[ext_resource path="res://sprites/game_mode.png" type="Texture" id=2]
[ext_resource path="res://texture/button_theme.tres" type="Theme" id=3]
[ext_resource path="res://transition_anim.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/loading_sprite.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 188, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 376, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 564, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 752, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 940, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1128, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1316, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1504, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1692, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1880, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2068, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 188, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 376, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 564, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 752, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 940, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1128, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1316, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1504, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1692, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1880, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2068, 188, 188, 188 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 188, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 376, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 564, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 752, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 940, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1128, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1316, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1504, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1692, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1880, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2068, 376, 188, 188 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 188, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 376, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 564, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 752, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 940, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1128, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1316, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1504, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1692, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1880, 564, 188, 188 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2068, 564, 188, 188 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="game_mode" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 600, 0 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0
rect_min_size = Vector2( 500, 500 )
custom_constants/separation = 50

[node name="single_player" type="Button" parent="Container"]
margin_right = 500.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Single Player"

[node name="multiplayer" type="Button" parent="Container"]
margin_top = 100.0
margin_right = 500.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Multiplayer"

[node name="tours" type="Button" parent="Container"]
margin_top = 200.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Tours"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tournaments" type="Button" parent="Container"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Tournaments"

[node name="go_back" type="Button" parent="."]
margin_left = 150.0
margin_top = 800.0
margin_right = 456.0
margin_bottom = 877.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Go Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition_anim" parent="." instance=ExtResource( 4 )]

[node name="loading_sprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 286.186, 625.725 )
frames = SubResource( 50 )
frame = 32
[connection signal="pressed" from="Container/single_player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Container/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Container/tournaments" to="." method="_on_tournaments_pressed"]
[connection signal="pressed" from="go_back" to="." method="_on_go_back_pressed"]
